Fixed Responsive Menu Button
On resize the button shrank too much.  This has been fixed.

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -30,7 +30,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
 input.search-query {}
 
 body {overflow-x: hidden;}
-.navbar .brand {width: 300px; padding: 10px 0 4px 70px; line-height: 1em; font-size: 2em; font-weight: bold; color: #74b4cb;}
+.navbar .brand {width: 300px; padding: 10px 0 4px; line-height: 1em; font-size: 2em; font-weight: bold; color: #74b4cb;}
 .navbar img.brand-logo {height: 1em; vertical-align: text-top; margin: 2px 0 0;}
 .flexslider {border-bottom: 0px;}
 .flexslider .slides .jumbotron-image img {width: auto; margin: 0 auto;}
@@ -39,4 +39,6 @@ body {overflow-x: hidden;}
 @media (max-width: 767px) {
 	.logged-in .navbar-fixed-top {margin-top: 0;}
 	.navbar .brand {padding-top: 2px;}
+	.navbar .btn-navbar {padding: 7px 6px;}
 }
+
